--- a/Website/html/resume.html
+++ b/Website/html/resume.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="../css/styles.css">
     <style>
         body{
-            background-image: url(https://img.freepik.com/free-vector/larkspur-by-william-morris_53876-58889.jpg);            
+            background-color: darkgrey;          
         }
     </style>
 </head>
 <body>
-    <h1>Under Construction...</h1>
+    <h1>Resume</h1>
     <a href="../index.html">Home
     <a href="about.html">Awesome Stuff</a>
         <br>
