--- a/Website/html/subhtml/practice.html
+++ b/Website/html/subhtml/practice.html
@@ -6,12 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    links to stuff
-    <br>
-    <a href="../../index.html">Index</a>
-    <br>
-    heres an image
-    <br>
-    <img src="../../img/gradphoto.jpg" alt="gradphoto" width="50%">
+    <div></div>
 </body>
 </html>
