--- a/Website/index.html
+++ b/Website/index.html
@@ -14,12 +14,14 @@
     <p class="rizz">I am a pre-business major looking to graduate in ENT management. I hope to one day start a baking/catering business.</p>
 <a href="html/resume.html">Resume</a>
 <a href="html/about.html">Awesome Stuff</a>
+<a href="../index.html">Professional Webpage</a>
 <a href="html/subhtml/practice.html">practice links</a>
 <br>
     <!--you can force center stuff by putting it between center tags-->
     <img src="img/gradphoto.jpg" alt="picture of me" width="50%"> <!--local img-->
     <br>
-    <img class="imgcenter" src="https://en.wikipedia.org/wiki/File:Golde33443.jpg" alt="Photo of puppy" width="50%"> <!--online-->
-
+    <br>
+    <img class="imgcenter" src="https://www.dutch.com/cdn/shop/articles/shutterstock_1290320698.jpg?v=1651099282&width=1000" alt="Photo of puppy" width="50%"> <!--online-->
+<br>
 </body>
 </html>
