--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Delish Bake Shop</title>
+        <title>Delish Bake Shop - Home</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
@@ -31,8 +31,7 @@
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Products</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="store.html">Store</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="Website/index.html">Ugly Page</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="ordernow.html">Order Now!</a></li>
                     </ul>
                 </div>
             </div>
@@ -47,7 +46,7 @@
                             <span class="section-heading-lower">Feels Like Home!</span>
                         </h2>
                         <p class="mb-3"> Delish Bake Shop works hard to create high quality goods that are great for any occassion! Weddings, birthdays, baby showers, you name it! We have something just for you!</p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Learn More!</a></div>
+                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="ordernow.html">Order Now!</a></div>
                     </div>
                 </div>
             </div>
@@ -68,7 +67,9 @@
             </div>
         </section>
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Delish Bake Shop 2024</p></div>
+            <div class="container">
+                <ul class="nav-item px-lg-4"><a class="ordernowfooter" href="ordernow.html">Order Now!</a></ul>
+                <p class="m-0 small">Copyright &copy; Delish Bake Shop 2024</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
