--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <link href="css/mystyles.css" rel="mystyles" />
+        <link href="css/mystyles.css" rel="stylesheet"/>
     </head>
     <body>
         <header>
