--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <span class="section-heading-lower">Feels Like Home!</span>
                         </h2>
                         <p class="mb-3"> Delish Bake Shop works hard to create high quality goods that are great for any occassion! Weddings, birthdays, baby showers, you name it! We have something just for you!</p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="ordernow.html">Order Now!</a></div>
+                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#ordernowfooter">Order Now!</a></div>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </section>
-        <footer class="footer text-faded text-center py-5">
+        <footer id="ordernowfooter" class="footer text-faded text-center py-5">
             <div class="container">
                 <ul class="nav-item px-lg-4"><a class="ordernowfooter" href="ordernow.html">Order Now!</a></ul>
                 <p class="m-0 small">Copyright &copy; Delish Bake Shop 2024</p></div>
