--- a/website/html/resume.html
+++ b/website/html/resume.html
@@ -21,6 +21,7 @@
     <center>
  <img class="resumepic" src="../img/resumepic.jpg" alt="picture of me" width="45%">
     </center>
+    <div>
     <ol>
         <li>Skills</li>
             <ul>
@@ -49,5 +50,6 @@
             <li>Killian Mowing, Grantsville UT - <i>Lawn Care Provider</i></li>
           </ul>
     </ol>
+</div>
 </body>
 </html>
